A bit of cleaning and adding a bind.

--- a/xforms/admin.xhtml
+++ b/xforms/admin.xhtml
@@ -447,6 +447,10 @@
             </xforms:bind>
         </xforms:bind>
 
+
+        <xforms:bind nodeset="instance('3store-xquery-result')" type="xxforms:xml" />
+
+
         <!-- **************** DYNAMIC VALIDATION CONTROLS ********************** -->
         <xforms:action ev:event="xxforms-invalid" ev:observer="collections-list">
             <xforms:setvalue ref="instance('control-instance')/create-collection-trigger" value="false()" />
@@ -678,14 +682,6 @@
 
             <xforms:action ev:event="xforms-submit-error">
                 <xforms:setvalue ref="instance('control-instance')/status" value="event('response-body')" />
-                <xforms:message level="modal">
-                    Error posting to 3store.
-                </xforms:message>
-            </xforms:action>
-            <xforms:action ev:event="xforms-submit-done">
-                <xforms:action if="number(instance('xquery-result'))">
-                    <xforms:setvalue ref="instance('control-instance')/status">Successfully posted to 3store.</xforms:setvalue>
-                </xforms:action>
             </xforms:action>
         </xforms:submission>
 
